@@ -209,7 +209,6 @@ sub SpawnWaitKill ($)
         $result = $self->WaitKill ($timeout);
     }
 
-    $self->copy_log ();
     $self->remove_executable ();
 
     return $result;
@@ -249,31 +248,6 @@ sub IgnoreHostRoot
 
     return $self->{IGNOREHOSTROOT};
 }
-
-
-sub copy_log ()
-{
-    my $self = shift;
-    my $program = $self->Executable ();
-    my $test = basename ($program);
-    my $adb_process = $ENV{'ANDROID_SDK_ROOT'} . "/platform-tools/adb";
-    my $fsroot_target = $ENV{'ANDROID_FS_ROOT'};
-    my $silent;
-
-    if (!defined $ENV{'ACE_TEST_VERBOSE'}) {
-      $silent = "2> /dev/null"
-    }
-
-    # copy the log back to the host sytem
-    my $cmd_copy_log = $adb_process . ' pull ' .
-                       $fsroot_target . '/tests/log/' . $test . '.log ' .
-                       $ENV{'ACE_ROOT'}. '/tests/log/' . $test . '.log $silent';
-    if (defined $ENV{'ACE_TEST_VERBOSE'}) {
-        print STDERR "Pull log from target : $cmd_copy_log\n";
-    }
-
-    system ( $cmd_copy_log );
- }
 
 sub remove_executable ()
 {
@@ -461,7 +435,7 @@ sub PutFile ($)
 
     my $adb_process = $ENV{'ANDROID_SDK_ROOT'} . "/platform-tools/adb";
 
-    my $cmd = "$adb_process" . ' push '. "$src $dest 2> /dev/null $silent";
+    my $cmd = "$adb_process" . ' push '. "$src $dest $silent";
 
     if (defined $ENV{'ACE_TEST_VERBOSE'}) {
       print STDERR "PutFile cmd: $cmd\n";
